{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 11,
  "lineage": "7aab1382-1911-edb5-ed94-5c2568bda22c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04f3948844ad0277b",
            "owner_id": "541985950087",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "vpc_id": "vpc-07e80ef7fae3e753f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541985950087:security-group/sg-00e8642ff7c8dad60",
            "description": "ELB Allowed Ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e8642ff7c8dad60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2ContainerService-py-cluster-AlbSecurityGroup-1BERFKNMYTVY5",
            "name_prefix": null,
            "owner_id": "541985950087",
            "revoke_rules_on_delete": null,
            "tags": {
              "Description": "Created for ECS cluster py-cluster",
              "Name": "ECS py-cluster - ALB SecurityGroup"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-07e80ef7fae3e753f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541985950087:security-group/sg-079dc92b7ce7b7c9c",
            "description": "ECS Allowed Ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079dc92b7ce7b7c9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e8642ff7c8dad60"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "EC2ContainerService-py-cluster-EcsSecurityGroup-1JJ8BOA6AHUVM",
            "name_prefix": null,
            "owner_id": "541985950087",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Created for ECS cluster py-cluster",
              "Name": "ECS py-cluster - ECS SecurityGroup"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-07e80ef7fae3e753f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1558384828",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00e8642ff7c8dad60",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg1-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1886867707",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e8642ff7c8dad60",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg1-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-2549942171",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e8642ff7c8dad60",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3905556013",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-079dc92b7ce7b7c9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg2-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-986161070",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-079dc92b7ce7b7c9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3000,
            "type": "ingress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541985950087:vpc/vpc-07e80ef7fae3e753f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b8eed50fd3779e4",
            "default_route_table_id": "rtb-06ffe94bc0667758e",
            "default_security_group_id": "sg-03c3bd253f8f2e788",
            "dhcp_options_id": "dopt-0021967a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e80ef7fae3e753f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06ffe94bc0667758e",
            "owner_id": "541985950087",
            "tags": {
              "Description": "Created for ECS cluster py-cluster",
              "Name": "ECS py-cluster - VPC"
            }
          }
        }
      ]
    }
  ]
}